<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
         android:capitalize="words"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:key="pref_start_action_name"
        android:title="@string/pref_title_name"/>

    <EditTextPreference
         android:capitalize="words"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:key="pref_start_action_user_name"
        android:title="@string/pref_title_user_name"/>

    <EditTextPreference
         android:capitalize="words"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:key="pref_start_action_birthday"
        android:title="@string/pref_title_birthday"/>


    <EditTextPreference
        android:capitalize="words"
        android:inputType="number"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:key="pref_start_action_number_mobile"
        android:title="@string/pref_title_number_mobile"/>


    <EditTextPreference
         android:capitalize="words"
        android:inputType="textCapWords"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:key="pref_start_action_email"
        android:title="@string/pref_title_email"/>


    <EditTextPreference
         android:capitalize="words"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:key="pref_start_action_password"
        android:title="@string/pref_title_password"/>


</PreferenceScreen>